<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    tools:context="com.tapspeedcounter.admin.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fingers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_text"
            android:fontFamily="sans-serif-light"
            android:text="@string/finger"
            android:textColor="#FFF3E0"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/finger_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/one_finger_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/one_finger" />

            <RadioButton
                android:id="@+id/two_finger_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/two_fingers" />
        </RadioGroup>


        <TextView
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_text"
            android:fontFamily="sans-serif-light"
            android:text="@string/interval"
            android:textColor="#FFF3e0"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/time_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fifteen_second_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fifteen_seconds" />

            <RadioButton
                android:id="@+id/thirty_second_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/thirty_seconds" />


        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/shape_normal"
        android:text="@string/done"
        android:textColor="#FFF3E0" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7448187601886870/3074318079">
    </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</LinearLayout>
