<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/your_tap_speed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/your_speed_is"
        android:textColor="#FF9800"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:textSize="56sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tap_per_second"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recalculate_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/shape_normal"
                android:text="@string/again"
                android:textColor="#FFF3E0" />

            <Button
                android:id="@+id/other_options_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_normal"
                android:text="@string/other_options"
                android:textColor="#FFF3E0" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>